sonarr/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
