sonarr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      containers:
      - name: sonarr
        image: ghcr.io/linuxserver/sonarr
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8989
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /login
            port: http
          initialDelaySeconds: 60
        readinessProbe:
          httpGet:
            path: /login
            port: http
        resources:
          limits:
            cpu: 500m
            memory: 600Mi
          requests:
            cpu: 100m
            memory: 300Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: media
          subPath: Scratch/Download
        - mountPath: /tv
          name: media
          subPath: TV
        - mountPath: /tv_sync
          name: sync
          subPath: tv
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
      - name: sync
        persistentVolumeClaim:
          claimName: media-share-sync
