sonarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: db3000
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: db3000
spec:
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/component: server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  type: ClusterIP
