sonarr/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sonarr.xmple.io`)
    kind: Rule
    services:
    - name: sonarr
      port: 80
  tls:
    secretName: sonarr-tls
    options:
      name: mintls13
      namespace: traefik
